# cypress-buildd

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-and-release.yml  build.yml  dll-linux.yml  dll.yml  launcher-linux.yml  launcher.yml
Container/: Containerfile
Container/regs/: bfn.reg  dll_overrides.reg  gw1.reg  gw2.reg
Docs/: HOSTING.md  JOINING.md  LAUNCH_ARGS.md  LINUX.md  LINUX_DEDICATED.md  PLAYLISTS.md  README.md  SERVER_COMMANDS.md  TOS.md
Docs/BFN/: GAME_MODIFIERS.md  LEVEL_INFO.md
Docs/GW1/: GAME_MODIFIERS.md  LEVEL_INFO.md
Docs/GW2/: GAME_MODIFIERS.md  LEVEL_INFO.md
Launcher/: CypressLauncher.csproj  app.manifest
Launcher/CypressLauncher/: EaLoginWindow.cs  GameInstance.cs  LauncherConfig.cs  MessageHandler.Auth.cs  MessageHandler.Browser.cs  MessageHandler.Core.cs  MessageHandler.Data.cs  MessageHandler.Identity.cs  MessageHandler.Init.cs  MessageHandler.Instance.cs  MessageHandler.Launch.cs  MessageHandler.Moderator.cs  MessageHandler.Relay.cs  MessageHandler.Translations.cs  MessageHandler.Update.cs  PatchCli.cs  PatchManager.cs  Program.cs  ResourceBuilder.cs  launcher.config.json
Launcher/wwwroot/: index.html
Server/: .clang-format  CMakeLists.txt  dllmain.cpp  framework.h  pch.h  toolchain-linux-winsdk.cmake
Server/Examples/: Start_Dedicated.bat  Start_Join.bat  playlist_example.json
Server/Source/Anticheat/: Anticheat.cpp  Anticheat.h  ClientLevelLoadingProtection.cpp  ClientLevelLoadingProtection.h  LoadoutValidator.cpp  LoadoutValidator.h  OOB.cpp  OOB.h  PlayerDamageListener.cpp  PlayerDamageListener.h  PlayerSpawnListener.cpp  PlayerSpawnListener.h  ServerEventSyncListener.cpp  ServerEventSyncListener.h  ServerSettingEntityListener.cpp  ServerSettingEntityListener.h  StreamManagerMessageHook.cpp  StreamManagerMessageHook.h
Server/Source/Core/: Assert.cpp  Client.cpp  Logging.cpp  Program.cpp  Server.cpp  VersionInfo.cpp
Server/Source/Core/Console/: ConsoleFunctions.cpp
Server/Source/Cypress/Presence/: BFNPresenceManager.cpp  GW1PresenceManager.cpp  GW2PresenceManager.cpp  PresenceManager.cpp
Server/Source/GameHooks/: fbClientHooks.cpp  fbClientHooks.h  fbEnginePeerHooks.cpp  fbEnginePeerHooks.h  fbMainHooks.cpp  fbMainHooks.h  fbServerHooks.cpp  fbServerHooks.h
Server/Source/GameModules/: BFNModule.cpp  GW1Module.cpp  GW2Module.cpp
Server/Source/fb/Engine/: MessageManager.cpp
Server/include/: CypressIdentity.h  FreeCam.h  HWID.h  MemUtil.h  ServerBanlist.h  ServerPlaylist.h  SideChannel.cpp  SideChannel.h  StringUtil.h  eastl_arena_allocator.cpp  eastl_arena_allocator.h  eastl_config.h
Server/include/Cypress/Core/: Client.h  Config.h  Logging.h  Program.h  Server.h  VersionInfo.h
Server/include/Cypress/Core/Console/: ConsoleFunctions.h
Server/include/Cypress/Presence/: BFNPresenceManager.h  GW1PresenceManager.h  GW2PresenceManager.h  PresenceManager.h
Server/include/EASTL/: new_string.h
Server/include/GameModules/: BFNModule.h
Server/include/Kyber/: SocketManager.cpp  SocketSpawnInfo.h  UDPSocket.cpp  UDPSocket.h
Server/include/fb/: Main.h  SecureReason.h
Server/include/fb/Engine/: Array.h  Client.h  ClientGameContext.h  Console.h  ConsoleContext.h  ConsoleMethod.h  ConsoleRegistry.h  EntityBus.h  EventSyncReachedClientMessage.h  ExecutionContext.h  GameView.h  ITypedObject.h  LevelSetup.h  MemoryArena.h  Message.h  MessageListener.h  MessageManager.h  NetworkableMessage.h  ObjectExtentRegistration.h  PVZCharacterServerPlayerExtent.h  ResourceManager.h  Schematics.h  ScriptContext.h  Server.h  ServerConnection.h  ServerEventSyncEntity.h  ServerGameContext.h  ServerGhostManager.h  ServerPeer.h  ServerPlayer.h  ServerPlayerManager.h  SettingsManager.h  String.h
Server/include/fb/TypeInfo/: Asset.h  DataContainer.h  EventSyncEntityData.h  GamePlatform.h  LogicPrefabReferenceObjectData.h  PVZCharacterCustomizationAsset.h  PVZCharacterWeaponUnlockAsset.h  SettingEntityData.h  WeaponSlot.h
tools/cypress-servers/: build.ps1  (+2 more)
(+55 files in other folders)
